# NamedTags

./: .gitignore  CMakeLists.txt  doxygen.cfg  readme.md
NamedTags/: ArrayTag.cpp  ArrayTag.hpp  CMakeLists.txt  CommonTags.hpp  CompoundTag.cpp  CompoundTag.hpp  JsonDeserializer.cpp  JsonDeserializer.hpp  JsonDeserializerPrivate.cpp  JsonDeserializerPrivate.hpp  JsonSerializer.cpp  JsonSerializer.hpp  JsonSerializerPrivate.cpp  JsonSerializerPrivate.hpp  ObserverTag.cpp  ObserverTag.hpp  Serializer.hpp  TagBase.hpp  WrapperTag.hpp
TestApp/: CMakeLists.txt  Main.cpp
doxygen_files/: liblicense.md
